tests/negative/traits/invoke-addr-method-not-found.orng
fn main() -> Int {
    let x = 4
    let y = &x
    y.>add(56)
}